added giphy container and some styling

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -25,6 +25,9 @@
                     <a class="nav-link" href="#contact">Contact</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#stuff">Stuff</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link login-modal-btn"  data-toggle="modal"
                         data-target=".bd-example-modal-lg-1">Log
                         in</a>
@@ -123,6 +126,7 @@
 
 
 <div class="container-fluid">
+    <h1 class="display-4 text-center">Zoom in or out <i class="fas fa-plane-departure fa-f2"></i></h1>
     <div class="row">
         <div class="col-md-3 col-sm-12">
            <img class="worldPics" src="/images/pink-bedspread-inside-room-2351290.jpg">
@@ -242,7 +246,7 @@
     <div class="container-fluid padding">
         <div class="row welcome text-center">
             <div class="col-12">
-                <h1 class="display-4">LET LEARNING BE SIMPLE</h1>
+                <h1 class="display-4 title1">LET LEARNING BE SIMPLE</h1>
                 <h1 class="espresso-1">Wait wait...</h1>
                 <h1 class="espresso-2">Quick expreso break</h1>
                 <p class="bulletPoints">No more traveling to each others homes, libraries, or schools to conduct tutoring sessions.</p>
@@ -334,6 +338,41 @@
 
         </div>
     </div>
+    <div class="container-fluid padding">
+        <div class="col-12">
+            <h1 class="display-4 text-center" id="stuff">Take notes for succsess</h1>
+                    <hr class="light">
+                    
+                </div>
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <h5 class="background">#cleanIsIn</h5>
+                   
+                    <iframe src="https://giphy.com/embed/SAITQHfB6SLQc3fuf3" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/safefood-hand-handwashing-washing-SAITQHfB6SLQc3fuf3"></a></p>
+                    
+                    <h5 class="background">This Guy...</h5>
+                    <iframe src="https://giphy.com/embed/RiiCFIU32SKJgSAvo7" width="480" height="267" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/donald-trump-wash-your-hands-RiiCFIU32SKJgSAvo7"></a></p>
+                </div>
+                <div class="col-md-4">
+                    <h5 class="background">#vote don't be that guy... or girl</h5>
+                
+                    <iframe src="https://giphy.com/embed/8lTcWsBdlhXXodYP0u" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/GoVote-vote-election-govote-8lTcWsBdlhXXodYP0u"></a></p>
+                    <h5 class="background">#beMoreLikeDarth</h5>
+                   
+                    <iframe src="https://giphy.com/embed/26gsmQ7ABO9RaASFq" width="401" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/starwars-darthvader-vader-theforce-darth-scifi-humor-recycle-26gsmQ7ABO9RaASFq"></a></p>
+                </div>
+                <div class="col-md-4">
+                     <h5 class="background">#liveYoLife</h5>
+                    <iframe src="https://giphy.com/embed/WQaHrd6Z3038DofLRl" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/love-valentines-day-csak-WQaHrd6Z3038DofLRl"></a></p>
+                    <h5 class="background">#stopHoarding #shareTheTP</h5>
+                  
+                     <iframe src="https://giphy.com/embed/H3NXbLWLwv4b52X4ih" width="480" height="326" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/moodman-coronavirus-tp-toilet-paper-H3NXbLWLwv4b52X4ih"></a></p>
+            </div>
+            </div>
+            </div>
+
+
+
     <!-- footer -->
     <footer>
         <div class="container-fluid padding">
@@ -369,7 +408,7 @@
                 </div>
             </div>
 
-        </div>
+        </footer>
 
         <script language="javascript" type="text/javascript">
             // on click to change login page to signup page
@@ -418,7 +457,7 @@
 
             setTimeout(function() {
             $(".bulletPoints").fadeOut("fast");
-            $(".display-4").fadeOut("fast");
+            $(".title1").fadeOut("fast");
             $(".espresso-1").show();
             }, 8000);
 
@@ -435,7 +474,7 @@
             $(".espresso-2").hide();
              $(".espresso").hide();
               $(".bulletPoints").fadeIn("fast");
-            $(".display-4").fadeIn("fast");
+            $(".title1").fadeIn("fast");
             }, 19785);
 
 
