--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -57,11 +57,6 @@ html, body{
   align-items: center;
 
 }
-/* .parrallax2 h1 {
-  color: pink;
-  font-weight: bold;
-  padding-bottom: 5vh ;
-} */
 
 .bold-link {
   color: white;
@@ -73,26 +68,6 @@ html, body{
   border-radius: 10px;
 }
  
-/* .carousel-inner img {
-  width: 100%;
-  height: 100%;
-}
-.carousel-caption {
- position: absolute;
- top: 50%;
- transform: translateY(-50%);
-}
-.carousel-caption h1 {
-font-size: 500%;
-text-transform: uppercase;
-text-shadow: 1px 1px 10px #000; 
-}
-.carousel-caption h3 {
-  font-size: 200%;
-  font-weight: 500;
-  text-shadow: 1px 1px 10px #000;
-  padding-bottom: 1rem;
-  }  */
   .btn-primary {
     background-color: black;
     border: 3px ridge white;
@@ -200,10 +175,9 @@ text-shadow: 1px 1px 10px #000;
 h5.background {
 background-color: black;
 padding: 2px;
+color: white;
 }
-h5.background:hover {
- transform: rotate(35deg);
-  }
+
 .worldPics {
   height: 160px;
   width: 185px;
@@ -476,3 +450,7 @@ h5.background:hover {
   background-color: #000;
 }
 
+.giphy-embed {
+  border: solid black 15px;
+
+}
