front end filter update

--- a/views/instructors.handlebars
+++ b/views/instructors.handlebars
@@ -29,15 +29,15 @@
                     class="dropdown-toggle">Duration:</a>
                 <ul class="collapse list-unstyled" id="durationSubmenu">
                     <li>
-                        <a onclick="setSelected(this);" href="javascript:void(0);" data-setting="dur1">Less than 30
+                        <a onclick="setSelected(this);" href="javascript:void(0);" data-setting="d1">Less than 30
                             min</a>
                     </li>
                     <li>
-                        <a onclick="setSelected(this);" data-setting="dur2" href="javascript:void(0);">Less than 60
+                        <a onclick="setSelected(this);" data-setting="d2" href="javascript:void(0);">Less than 60
                             min</a>
                     </li>
                     <li>
-                        <a onclick="setSelected(this);" data-setting="dur3" href="javascript:void(0);">Over 60 min
+                        <a onclick="setSelected(this);" data-setting="d3" href="javascript:void(0);">Over 60 min
                         </a>
                     </li>
                 </ul>
@@ -49,11 +49,11 @@
                         <a onclick="setSelected(this);" data-setting="free" href="javascript:void(0);">FREE</a>
                     </li>
                     <li>
-                        <a onclick="setSelected(this);" data-setting="less25" href="javascript:void(0);">Less than
+                        <a onclick="setSelected(this);" data-setting="p2" href="javascript:void(0);">Less than
                             $25</a>
                     </li>
                     <li>
-                        <a onclick="setSelected(this);" data-setting="less50" href="javascript:void(0);">Less than
+                        <a onclick="setSelected(this);" data-setting="p3" href="javascript:void(0);">Less than
                             $50</a>
                     </li>
                 </ul>
@@ -63,13 +63,14 @@
                     class="dropdown-toggle">Instructors:</a>
                 <ul class="collapse list-unstyled" id="instructorsSubmenu">
                     <li>
-                        <a onclick="setSelected(this);" data-setting="James" href="javascript:void(0);">James</a>
+                        <a onclick="setSelected(this);" data-setting="Instructor" data-id="1"
+                            href="javascript:void(0);">James</a>
                     </li>
                     <li>
-                        <a onclick="setSelected(this);" data-setting="Peter" href="javascript:void(0);">Peter</a>
+                        <a onclick="setSelected(this);" data-setting="Instructor" href="javascript:void(0);">Peter</a>
                     </li>
                     <li>
-                        <a onclick="setSelected(this);" data-setting="Jack" href="javascript:void(0);">Jack</a>
+                        <a onclick="setSelected(this);" data-setting="Instructor" href="javascript:void(0);">Jack</a>
                     </li>
                 </ul>
             </li>
