styling for selected filter option

--- a/public/stylesheets/instructor.css
+++ b/public/stylesheets/instructor.css
@@ -199,3 +199,13 @@ footer{
   .edit-class-form {
       display: none;
   }
+
+  li.selected a{
+      background-color: tomato;
+
+  }
+
+  #content {
+      padding-bottom: 0px;
+      padding-top: 0px;
+  }
