--- a/views/students.handlebars
+++ b/views/students.handlebars
@@ -16,10 +16,10 @@
                     class="dropdown-toggle">Classes:</a>
                 <ul class="collapse list-unstyled" id="classesSubmenu">
                     <li>
-                        <a href="/students/enrolled">My Classes</a>
+                        <a onclick="setSelected(this);" data-setting="my" href="javascript:void(0);">My Classes</a>
                     </li>
                     <li>
-                        <a href="/students">All Classes</a>
+                        <a onclick="setSelected(this);" data-setting="all" href="javascript:void(0);">All Classes</a>
                     </li>
                 </ul>
             </li>
@@ -28,13 +28,16 @@
                     class="dropdown-toggle">Duration:</a>
                 <ul class="collapse list-unstyled" id="durationSubmenu">
                     <li>
-                        <a href="#">Less than 30 min</a>
+                        <a onclick="setSelected(this);" href="javascript:void(0);" data-setting="d1">Less than 30
+                            min</a>
                     </li>
                     <li>
-                        <a href="#">Less than 60 min</a>
+                        <a onclick="setSelected(this);" data-setting="d2" href="javascript:void(0);">Less than 60
+                            min</a>
                     </li>
                     <li>
-                        <a href="#">Over 60 min </a>
+                        <a onclick="setSelected(this);" data-setting="d3" href="javascript:void(0);">Over 60 min
+                        </a>
                     </li>
                 </ul>
             </li>
@@ -42,13 +45,15 @@
                 <a href="#priceSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Price:</a>
                 <ul class="collapse list-unstyled" id="priceSubmenu">
                     <li>
-                        <a href="#">FREE</a>
+                        <a onclick="setSelected(this);" data-setting="free" href="javascript:void(0);">FREE</a>
                     </li>
                     <li>
-                        <a href="#">Less than $25</a>
+                        <a onclick="setSelected(this);" data-setting="p2" href="javascript:void(0);">Less than
+                            $25</a>
                     </li>
                     <li>
-                        <a href="#">Less than $50</a>
+                        <a onclick="setSelected(this);" data-setting="p3" href="javascript:void(0);">Less than
+                            $50</a>
                     </li>
                 </ul>
             </li>
@@ -57,13 +62,14 @@
                     class="dropdown-toggle">Instructors:</a>
                 <ul class="collapse list-unstyled" id="instructorsSubmenu">
                     <li>
-                        <a href="#">James</a>
+                        <a onclick="setSelected(this);" data-setting="Instructor" data-id="1"
+                            href="javascript:void(0);">James</a>
                     </li>
                     <li>
-                        <a href="#">Peter</a>
+                        <a onclick="setSelected(this);" data-setting="Instructor" href="javascript:void(0);">Peter</a>
                     </li>
                     <li>
-                        <a href="#">Jack</a>
+                        <a onclick="setSelected(this);" data-setting="Instructor" href="javascript:void(0);">Jack</a>
                     </li>
                 </ul>
             </li>
@@ -71,10 +77,10 @@
 
         <ul class="list-unstyled CTAs">
             <li>
-                <a href="" class="settings">Apply Settings</a>
+                <a class="settings" onclick="applySettings();" href="javascript:void(0);">Apply Settings</a>
             </li>
             <li>
-                <a href="" class="clear">Clear Settings</a>
+                <a href="/instructors" class="clear">Clear Settings</a>
             </li>
         </ul>
 
@@ -206,89 +212,63 @@
                             {{#if my}}
                             <button type="button" class="btn btn-danger delete-class" data-toggle="modal"
                                 data-target="#deleteClass" data-backdrop="static" data-keyboard="false">Remove</button>
-                            {{!-- Delete class modal: are you sure you want to delete? --}}
-                            {{!-- <div class="modal fade bd-example-modal-lg-1" tabindex="-1" role="dialog"
-                aria-labelledby="myLargeModalLabel" aria-hidden="true" id="deleteClass">
-                <div class="modal-dialog modal-lg">
-                    <div class="modal-content">
 
-                        <div class="modal-header">
-                            <h5 class="modal-title">Are you sure??</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"
-                                id="delete-x-btn">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <p>Are you sure you want to remove this class?</p>
-                        </div>
-                        <div class="modal-footer">
+                            {{else}}
+                            <button type="button" class="btn btn-secondary add-class-btn">Add this class</button>
+                            {{/if}}
+                            <a href="mailto:{{instructEmail}}" class="btn btn-danger">Email instructor</a>
                             <button type="button" class="btn btn-secondary" data-dismiss="modal"
-                                id="delete-close-btn">Nah, I'll
-                                keep it</button>
-                            <button type="button" class="btn btn-danger delete-class">Delete</button>
+                                id="details-close-btn">Close</button>
+                            {{!-- <button type="submit" form="l" class="btn btn-default">Login</button> --}}
                         </div>
-                    </div>
-                </div> --}}
-                        {{!-- </div> --}}
-                        {{!-- <form class="delete-class" data-class-id={{id}} data-target="#classDetails" action="/api/removeclass/{{id}}" method="DELETE">
-                                <input type="submit" value="Delete Class" class="btn btn-danger">
-                            </form> --}}
-                        {{else}}
-                        <button type="button" class="btn btn-secondary add-class-btn">Add this class</button>
-                        {{/if}}
-                        <a href="mailto:{{instructEmail}}" class="btn btn-danger">Email instructor</a>
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal"
-                            id="details-close-btn">Close</button>
-                        {{!-- <button type="submit" form="l" class="btn btn-default">Login</button> --}}
+
                     </div>
 
                 </div>
-
             </div>
         </div>
-    </div>
 
-    {{!-- footer --}}
+        {{!-- footer --}}
 
-    <footer>
-        <div class="container-fluid padding">
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <h4>Resources</h4>
-                    <hr class="light">
-                    <a href="https://www.github.com/" target="_blank"><i class="fab fa-github fa-3x"></i></a>
-                    <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube fa-3x"></i></a>
-                    <a href="https://stackoverflow.com" target="_blank"><i class="fab fa-stack-overflow fa-3x"></i></a>
-                    <a href="https://getbootstrap.com" target="_blank"><i class="fab fa-bootstrap fa-3x"></i></a>
-                    <a href="https://www.google.com/" target="_blank"><i class="fab fa-google fa-3x"></i></a>
-                    <!-- neet to rplace with w3schools or delete 
+        <footer>
+            <div class="container-fluid padding">
+                <div class="row text-center">
+                    <div class="col-md-4">
+                        <h4>Resources</h4>
+                        <hr class="light">
+                        <a href="https://www.github.com/" target="_blank"><i class="fab fa-github fa-3x"></i></a>
+                        <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube fa-3x"></i></a>
+                        <a href="https://stackoverflow.com" target="_blank"><i
+                                class="fab fa-stack-overflow fa-3x"></i></a>
+                        <a href="https://getbootstrap.com" target="_blank"><i class="fab fa-bootstrap fa-3x"></i></a>
+                        <a href="https://www.google.com/" target="_blank"><i class="fab fa-google fa-3x"></i></a>
+                        <!-- neet to rplace with w3schools or delete 
                                         <i class="fab fa-github fa-3x"></i> -->
 
+                    </div>
+                    <div class="col-md-4">
+                        <h4>Location</h4>
+                        <hr class="light">
+                        <p>Full-stack Flex Bootcamp</p>
+                        <p>Georgia, Tech</p>
+                        <p>Atlanta, GA</p>
+                        <p>30308</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h4>Support</h4>
+                        <hr class="light">
+                        <p>tutorme.supoort@goodquestion.org</p>
+                    </div>
+                    <div class="col-12">
+                        <hr class="light">
+                        <h4>&copy; tutorme.com</h4>
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <h4>Location</h4>
-                    <hr class="light">
-                    <p>Full-stack Flex Bootcamp</p>
-                    <p>Georgia, Tech</p>
-                    <p>Atlanta, GA</p>
-                    <p>30308</p>
-                </div>
-                <div class="col-md-4">
-                    <h4>Support</h4>
-                    <hr class="light">
-                    <p>tutorme.supoort@goodquestion.org</p>
-                </div>
-                <div class="col-12">
-                    <hr class="light">
-                    <h4>&copy; tutorme.com</h4>
-                </div>
+
             </div>
+        </footer>
 
-        </div>
-    </footer>
-
-</div>
+    </div>
 
 
 </div>
@@ -336,3 +316,6 @@
         });
     });
 </script>
+
+<script type="text/javascript" src="/js/student.js"></script>
+<script type="text/javascript" src="/js/filter.js"></script>
