adds ondelet cascade fro classes

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -193,7 +193,7 @@
 
                                 {{!-- set a minimum length for the password using the minlength attribute. --}}
                                 <label for="exampleInputPassword1">Password</label>
-                                <input type="password" class="form-control" id="password-input1" placeholder="Password">
+                                <input type="password" minlength="4" class="form-control" id="password-input1" placeholder="Password">
                             </div>
                             <div style="display: none" id="alert" class="alert alert-danger" role="alert">
                                 <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
