--- a/views/instructors.handlebars
+++ b/views/instructors.handlebars
@@ -391,7 +391,7 @@
                             <button type="button" class="btn btn-secondary" data-dismiss="modal"
                                 id="delete-close-btn">Nah, I'll
                                 keep it</button>
-                            <button type="button" class="btn btn-danger delete-btn">Delete it forever</button>
+                            <button type="button" class="btn btn-danger delete-btn">Yes, delete and notify students</button>
 
                         </div>
 
