--- a/views/instructors.handlebars
+++ b/views/instructors.handlebars
@@ -155,10 +155,10 @@
                             <li class="list-group-item">
                                 <h5 class="card-title">Instructor: {{Instructor.name}}</h5>
                             </li>
-                            <li class="list-group-item">Date and Time: {{datetime}}</li>
+                            {{!-- <li class="list-group-item">Date and Time: {{datetime}}</li>
                             <li class="list-group-item">Duration: {{duration}} minutes</li>
                             <li class="list-group-item">Capacity: {{capacity}} people</li>
-                            <li class="list-group-item">Price: ${{price}}</li>
+                            <li class="list-group-item">Price: ${{price}}</li> --}}
                         </ul>
                         <button type="button" class="btn btn-primary view-class" data-toggle="modal"
                             data-target="#classDetails" data-backdrop="static" data-keyboard="false"
