--- a/views/students.handlebars
+++ b/views/students.handlebars
@@ -161,10 +161,10 @@
                             <li class="list-group-item">
                                 <h5 class="card-title">Instructor: {{Instructor.name}}</h5>
                             </li>
-                            <li class="list-group-item">Date and Time: {{datetime}}</li>
+                            {{!-- <li class="list-group-item">Date and Time: {{datetime}}</li>
                             <li class="list-group-item">Duration: {{duration}} minutes</li>
                             <li class="list-group-item">Capacity: {{capacity}} people</li>
-                            <li class="list-group-item">Price: ${{price}}</li>
+                            <li class="list-group-item">Price: ${{price}}</li> --}}
                         </ul>
                         <button class="btn btn-primary view-class" data-toggle="modal" data-target="#classDetails"
                             data-class-id={{id}} data-instructor-email={{Instructor.email}} data-backdrop="static"
@@ -224,7 +224,6 @@
                             {{#if my}}
                             <button type="button" class="btn btn-danger delete-class" data-toggle="modal"
                                 data-target="#deleteClass" data-backdrop="static" data-keyboard="false">Remove</button>
-
                             {{else}}
                             <button type="button" class="btn btn-secondary add-class-btn">Add this class</button>
                             {{/if}}
