--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -236,7 +236,7 @@
         <div class="col-12">
             <h1 class="display-4 title1">LET LEARNING BE SIMPLE</h1>
             <h1 class="espresso-1">Wait wait...</h1>
-            <h1 class="espresso-2">Quick expreso break</h1>
+            <h1 class="espresso-2">Quick espresso break</h1>
             <p class="bulletPoints">No more traveling to each others homes, libraries, or schools to conduct tutoring
                 sessions.</p>
             <p class="bulletPoints">Organize tutoring environments to fit your schedule</p>
