--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -68,12 +68,16 @@
     <div class="row jumbtron mt-3" id="about">
 
         <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10 p-2">
+
             <p class="lead">
                 An online tutoring service that is available to you from anywhere. link with others who have
                 already mastered what you are learning. everyone is good at something in their own way, here at
                 tutorMe if you feel like you have a good grasp on a language or framework simply select from the
                 listed provided and let others learn from you.
             </p>
+      
+
+
             <p>Students are able to browse upcoming study sessions, send messages.</p>
             <p>Teachers are able to select material that they feel like they know and can teach others, make up
                 sessions that students can join, set prices for what they are teahing. are able to browse upcoming
@@ -129,6 +133,7 @@
     <h1 class="display-4 text-center">Zoom in or out <i class="fas fa-plane-departure fa-f2"></i></h1>
     <div class="row">
         <div class="col-md-3 col-sm-12">
+            <h2 id="demo1">Here’s some curved text flowing clockwise.</h2>
            <img class="worldPics" src="/images/pink-bedspread-inside-room-2351290.jpg">
         </div>
         <div class="col-md-3 col-sm-12">
@@ -448,9 +453,8 @@
 
         <script>
 
-
-            // Wrap every letter in a span
-
+           // espresso machine hide and show
+           
             $(".espresso").hide();
             $(".espresso-1").hide();
             $(".espresso-2").hide();
@@ -477,8 +481,8 @@
             $(".title1").fadeIn("fast");
             }, 19785);
 
-
-           
+             // what is tutorMe animation
+            // Wrap every letter in a span
                
             var textWrapper = document.querySelector('.ml11 .letters');
             textWrapper.innerHTML = textWrapper.textContent.replace(/([^\x00-\x80]|\w)/g, "<span class='letter'>$&</span>");
@@ -564,9 +568,18 @@
                     duration: 500,
                     delay: 500
                 });
-        </script>
+
+
+              $('#demo').circleType({radius:135})
+
+    </script>
+       
 
         <script src="/js/index.js"></script>
         <script type="text/javascript" src="js/login.js"></script>
         <script type="text/javascript" src="js/signup.js"></script>
     </footer>
+
+
+
+    
