--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -74,6 +74,9 @@
                 already mastered what you are learning. everyone is good at something in their own way, here at
                 tutorMe if you feel like you have a good grasp on a language or framework simply select from the
                 listed provided and let others learn from you.
+
+                Individual and unique learning experience.
+                Positive work space
             </p>
       
 
@@ -99,51 +102,26 @@
 </div>
 
 
-{{!-- coffee break --}}
-
-{{!-- <div class="container-fluid espresso">
-
-    <div class="coffee-header">
-      <div class="coffee-header__buttons coffee-header__button-one"></div>
-      <div class="coffee-header__buttons coffee-header__button-two"></div>
-      <div class="coffee-header__display"></div>
-      <div class="coffee-header__details"></div>
-    </div>
-    <div class="coffee-medium">
-      <div class="coffe-medium__exit"></div>
-      <div class="coffee-medium__arm"></div>
-      <div class="coffee-medium__liquid"></div>
-      <div class="coffee-medium__smoke coffee-medium__smoke-one"></div>
-      <div class="coffee-medium__smoke coffee-medium__smoke-two"></div>
-      <div class="coffee-medium__smoke coffee-medium__smoke-three"></div>
-      <div class="coffee-medium__smoke coffee-medium__smoke-for"></div>
-      <div class="coffee-medium__cup"></div>
-    </div>
-    <div class="coffee-footer"></div>
-  </div>
- --}}
-
-
-
-
-
 
 
 <div class="container-fluid">
     <h1 class="display-4 text-center">Zoom in or out <i class="fas fa-plane-departure fa-f2"></i></h1>
     <div class="row">
         <div class="col-md-3 col-sm-12">
-            <h2 id="demo1">Here’s some curved text flowing clockwise.</h2>
+            <h5 id="picText1">tutorMe from bed</h5>
            <img class="worldPics" src="/images/pink-bedspread-inside-room-2351290.jpg">
         </div>
         <div class="col-md-3 col-sm-12">
           <img  class="worldPics" src="/images/turned-on-macbook-pro-on-brown-table-1580329.jpg">
+           <h5 id="picText2">tutorMe stress free</h5>
         </div>
         <div class="col-md-3 col-sm-12">
+             <h5 id="picText2">tutorMe right now...</h5>
              <img class="worldPics" src="/images/man-wearing-gray-blazer-838413 (1).jpg">
         </div>
         <div class="col-md-3 col-sm-12">
             <img  class="worldPics" src="/images/wrapped-toilet-paper-on-top-of-a-toilet-3944410.jpg">
+        <h5 id="picText4">tutorME from anywhere</h5>
         </div>
     </div>
 </div>
