seeds and a few other clean ups

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -282,7 +282,9 @@
                 <img class="card-imd-top profile1" src="">
                 <div class="card-body text-center">
                     <h4 class="card-title">Daria</h4>
-                    <p class="card-text">tons of exp</p>
+                    <p class="card-text">Full-Stack Developer in training. 
+                        Learning challenge is what makes us fully human. 
+                        Currently exploring MVC Frameworks.</p>
                     <a href="#" class="btn btn-outline-secondary url1">View Github Profile<br><i
                             class="fab fa-github fa-1x"></i></a>
                 </div>
