--- a/views/instructors.handlebars
+++ b/views/instructors.handlebars
@@ -273,7 +273,7 @@
                                                 <h5 class="card-title">Instructor: {{InstructorId}}</h5>
                                             </li>
                                             <li class="list-group-item">Date and Time: {{datetime}}</li>
-                                            <li class="list-group-item">Class Duration: {{duration}}</li>
+                                            <li class="list-group-item">Class Duration: {{duration}} minutes</li>
                                             <li class="list-group-item">Class Capacity: {{capacity}} people</li>
                                             <li class="list-group-item">Price: ${{price}}</li>
                                         </ul>
