--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -67,24 +67,23 @@
 <div class="container-fluid">
     <div class="row jumbtron mt-3" id="about">
 
-        <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10 p-2">
+        <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10 p-2 text-center">
 
             <p class="lead">
-                An online tutoring service that is available to you from anywhere. link with others who have
-                already mastered what you are learning. everyone is good at something in their own way, here at
-                tutorMe if you feel like you have a good grasp on a language or framework simply select from the
-                listed provided and let others learn from you.
+                An online tutoring service that is available to you from anywhere. 
+                </p>
+                <p>
+                link with others who have already mastered what you are learning.
+                Tutor others If you have a good grasp on coding, why not make your foundation and pocket stronger.
+                </p>
+                <h3>Bottom line...</h3>
+               <h6> Make your own positive work space </h6>  <h6> Set or pick your own hours </h6>  <h6> Learn at your convinence </h6>
 
-                Individual and unique learning experience.
-                Positive work space
-            </p>
+               
       
 
 
-            <p>Students are able to browse upcoming study sessions, send messages.</p>
-            <p>Teachers are able to select material that they feel like they know and can teach others, make up
-                sessions that students can join, set prices for what they are teahing. are able to browse upcoming
-                study sessions, send messages.</p>
+   
         </div>
         <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-2">
             <button type="button" class="btn btn-primary login-modal-btn mt-4" data-toggle="modal"
@@ -116,8 +115,8 @@
            <h5 id="picText2">tutorMe stress free</h5>
         </div>
         <div class="col-md-3 col-sm-12">
-             <h5 id="picText2">tutorMe right now...</h5>
-             <img class="worldPics" src="/images/man-wearing-gray-blazer-838413 (1).jpg">
+             <div><h5 id="simple_arc">tutorMe right now...</h5></div>
+          <div><img class="worldPics" src="/images/man-wearing-gray-blazer-838413 (1).jpg"></div>
         </div>
         <div class="col-md-3 col-sm-12">
             <img  class="worldPics" src="/images/wrapped-toilet-paper-on-top-of-a-toilet-3944410.jpg">
@@ -232,8 +231,8 @@
                 <h1 class="display-4 title1">LET LEARNING BE SIMPLE</h1>
                 <h1 class="espresso-1">Wait wait...</h1>
                 <h1 class="espresso-2">Quick expreso break</h1>
-                <p class="bulletPoints">No more traveling to each others homes, libraries, or schools to conduct tutoring sessions.</p>
-                <p class="bulletPoints">Organize tutoring environments to fit your schedule</p>
+                <p class="bulletPoints">We believe that there is something to learn from anyone.</p>
+                <p class="bulletPoints"> Organize tutoring environments to fit your schedule</p>
                 <p class="bulletPoints">Learning should be fast, simple and easy.</p>
 
                 <div class="col-12 espresso">
@@ -333,23 +332,17 @@
                    
                     <iframe src="https://giphy.com/embed/SAITQHfB6SLQc3fuf3" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/safefood-hand-handwashing-washing-SAITQHfB6SLQc3fuf3"></a></p>
                     
-                    <h5 class="background">This Guy...</h5>
-                    <iframe src="https://giphy.com/embed/RiiCFIU32SKJgSAvo7" width="480" height="267" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/donald-trump-wash-your-hands-RiiCFIU32SKJgSAvo7"></a></p>
                 </div>
                 <div class="col-md-4">
                     <h5 class="background">#vote don't be that guy... or girl</h5>
                 
                     <iframe src="https://giphy.com/embed/8lTcWsBdlhXXodYP0u" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/GoVote-vote-election-govote-8lTcWsBdlhXXodYP0u"></a></p>
-                    <h5 class="background">#beMoreLikeDarth</h5>
-                   
-                    <iframe src="https://giphy.com/embed/26gsmQ7ABO9RaASFq" width="401" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/starwars-darthvader-vader-theforce-darth-scifi-humor-recycle-26gsmQ7ABO9RaASFq"></a></p>
+        
                 </div>
                 <div class="col-md-4">
                      <h5 class="background">#liveYoLife</h5>
                     <iframe src="https://giphy.com/embed/WQaHrd6Z3038DofLRl" width="480" height="480" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/love-valentines-day-csak-WQaHrd6Z3038DofLRl"></a></p>
-                    <h5 class="background">#stopHoarding #shareTheTP</h5>
-                  
-                     <iframe src="https://giphy.com/embed/H3NXbLWLwv4b52X4ih" width="480" height="326" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/moodman-coronavirus-tp-toilet-paper-H3NXbLWLwv4b52X4ih"></a></p>
+                    
             </div>
             </div>
             </div>
@@ -394,6 +387,7 @@
         </footer>
 
         <script language="javascript" type="text/javascript">
+
             // on click to change login page to signup page
             const loginHere = () => {
                 $(".option-signup").fadeOut(100, () => {
