--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -124,33 +124,20 @@
     <h1 class="display-4 text-center">Zoom in or out <i class="fas fa-plane-departure fa-f2"></i></h1>
     <div class="row">
         <div class="col-md-3 col-sm-12">
-
             <h5 id="picText1">tutorMe from bed</h5>
            <img class="worldPics" src="/images/pink-bedspread-inside-room-2351290.jpg">
         </div>
         <div class="col-md-3 col-sm-12">
+            <h5 id="picText2">tutorMe stress free</h5>
           <img  class="worldPics" src="/images/turned-on-macbook-pro-on-brown-table-1580329.jpg">
-           <h5 id="picText2">tutorMe stress free</h5>
         </div>
         <div class="col-md-3 col-sm-12">
-             <div><h5 id="simple_arc">tutorMe right now...</h5></div>
-          <div><img class="worldPics" src="/images/man-wearing-gray-blazer-838413 (1).jpg"></div>
+             <h5 id="picText3">tutorMe right now...</h5>
+          <img class="worldPics" src="/images/man-wearing-gray-blazer-838413 (1).jpg">
         </div>
         <div class="col-md-3 col-sm-12">
-            <img  class="worldPics" src="/images/wrapped-toilet-paper-on-top-of-a-toilet-3944410.jpg">
-        <h5 id="picText4">tutorME from anywhere</h5>
-
-            <img class="worldPics" src="/images/pink-bedspread-inside-room-2351290.jpg">
-        </div>
-        <div class="col-md-3 col-sm-12">
-            <img class="worldPics" src="/images/turned-on-macbook-pro-on-brown-table-1580329.jpg">
-        </div>
-        <div class="col-md-3 col-sm-12">
-            <img class="worldPics" src="/images/man-wearing-gray-blazer-838413 (1).jpg">
-        </div>
-        <div class="col-md-3 col-sm-12">
-            <img class="worldPics" src="/images/wrapped-toilet-paper-on-top-of-a-toilet-3944410.jpg">
-
+             <h5 id="picText4">tutorME from anywhere</h5>
+        <img  class="worldPics" src="/images/wrapped-toilet-paper-on-top-of-a-toilet-3944410.jpg">
         </div>
     </div>
 </div>
@@ -379,46 +366,7 @@
             </div>
 
     </div>
-    <div class="row text-center">
-        <div class="col-md-4">
-            <h5 class="background">#cleanIsIn</h5>
 
-            <iframe src="https://giphy.com/embed/SAITQHfB6SLQc3fuf3" width="480" height="480" frameBorder="0"
-                class="giphy-embed" allowFullScreen></iframe>
-            <p><a href="https://giphy.com/gifs/safefood-hand-handwashing-washing-SAITQHfB6SLQc3fuf3"></a></p>
-
-            <h5 class="background">This Guy...</h5>
-            <iframe src="https://giphy.com/embed/RiiCFIU32SKJgSAvo7" width="480" height="267" frameBorder="0"
-                class="giphy-embed" allowFullScreen></iframe>
-            <p><a href="https://giphy.com/gifs/donald-trump-wash-your-hands-RiiCFIU32SKJgSAvo7"></a></p>
-        </div>
-        <div class="col-md-4">
-            <h5 class="background">#vote don't be that guy... or girl</h5>
-
-            <iframe src="https://giphy.com/embed/8lTcWsBdlhXXodYP0u" width="480" height="480" frameBorder="0"
-                class="giphy-embed" allowFullScreen></iframe>
-            <p><a href="https://giphy.com/gifs/GoVote-vote-election-govote-8lTcWsBdlhXXodYP0u"></a></p>
-            <h5 class="background">#beMoreLikeDarth</h5>
-
-            <iframe src="https://giphy.com/embed/26gsmQ7ABO9RaASFq" width="401" height="480" frameBorder="0"
-                class="giphy-embed" allowFullScreen></iframe>
-            <p><a
-                    href="https://giphy.com/gifs/starwars-darthvader-vader-theforce-darth-scifi-humor-recycle-26gsmQ7ABO9RaASFq"></a>
-            </p>
-        </div>
-        <div class="col-md-4">
-            <h5 class="background">#liveYoLife</h5>
-            <iframe src="https://giphy.com/embed/WQaHrd6Z3038DofLRl" width="480" height="480" frameBorder="0"
-                class="giphy-embed" allowFullScreen></iframe>
-            <p><a href="https://giphy.com/gifs/love-valentines-day-csak-WQaHrd6Z3038DofLRl"></a></p>
-            <h5 class="background">#stopHoarding #shareTheTP</h5>
-
-            <iframe src="https://giphy.com/embed/H3NXbLWLwv4b52X4ih" width="480" height="326" frameBorder="0"
-                class="giphy-embed" allowFullScreen></iframe>
-            <p><a href="https://giphy.com/gifs/moodman-coronavirus-tp-toilet-paper-H3NXbLWLwv4b52X4ih"></a></p>
-        </div>
-    </div>
-</div>
 
 <!-- footer -->
 
